# point-cloud-semantic-segmentation

./: .gitignore  CLEANUP_SUMMARY.md  GITHUB_SETUP.md  IMPLEMENTATION_SUMMARY.md  PRETRAINED_MODELS_README.md  README.md  console_gui_app.py  constraints.txt  download_models.py  install.bat  install_enhanced.sh  pyproject.toml  requirements.txt  test_pretrained_models.py
models/: README.md  model_info.json
pointroad/: CHANGELOG.md  LICENSE  SETUP.md  __init__.py
pointroad/pointroad/: __init__.py  cli.py
pointroad/pointroad/config/: defaults.yaml  enhanced_detection.yaml
pointroad/pointroad/io/: exporter.py  loader.py
pointroad/pointroad/ml/: enhanced_infer.py  infer.py  labels.py  model_loader.py  preprocess.py  pretrained_models.py
pointroad/pointroad/post/: cluster.py  color.py  enhanced_cluster.py  metrics.py
pointroad/pointroad/utils/: log.py  sysinfo.py  timer.py
pointroad/scripts/: build_exe.ps1  download_models.py  setup_env.ps1
pointroad/tests/: test_infer_smoke.py
