[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pointroad"
version = "0.1.0"
description = "High-accuracy CPU-first semantic segmentation and instance grouping for large road-scene point clouds with Open3D GUI"
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = {text = "MIT"}
authors = [
  { name = "PointRoad Team" }
]
keywords = ["point cloud", "semantic segmentation", "SemanticKITTI", "Open3D", "Windows", "CPU"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "open3d==0.18.0",
  "torch==2.2.2",
  "numpy==1.26.4",
  "scipy==1.11.4",
  "pydantic==2.7.2",
  "pydantic-settings==2.2.1",
  "PyYAML==6.0.1",
  "loguru==0.7.2",
  "tqdm==4.66.4",
  "click==8.1.7",
  "psutil==5.9.8",
  "platformdirs==4.2.2",
  "laspy==2.5.3",
  "pandas==2.2.2",
  "onnxruntime==1.18.0",
]

[project.scripts]
pcdseg = "pointroad.cli:main"

[tool.setuptools]
package-dir = {"" = "pointroad"}
packages = ["pointroad"]

[tool.black]
target-version = ["py310"]
line-length = 100

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501"]

